tests/ui/endpoint/self.stderr
error: Didn't expect self parameter
 --> $DIR/self.rs:9:13
  |
9 | fn read_all(self) {}
  |             ^^^^

error: `self` parameter is only allowed in associated functions
 --> $DIR/self.rs:9:13
  |
9 | fn read_all(self) {}
  |             ^^^^ not semantically valid as function parameter
  |
  = note: associated functions are those in `impl` or `trait` definitions

error[E0412]: cannot find type `read_all___gotham_restful_endpoint` in this scope
 --> $DIR/self.rs:5:12
  |
5 | #[resource(read_all)]
  |            ^^^^^^^^ not found in this scope
